# hogwarts-productivity-hub-bot

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pomodoro-requirements.md  tsconfig.json  vitest.config.ts
.claude/: settings.json
.github/: dependabot.yml
config/: install.sh
docs/: date-library-evaluation.md
drizzle/: 0011_tan_zombie.sql  0013_deep_invaders.sql  0014_luxuriant_sumo.sql  0015_freezing_franklin_storm.sql  0016_awesome_centennial.sql  0017_messy_mantis.sql  0018_moaning_callisto.sql  0019_military_deathbird.sql  0020_cuddly_hedge_knight.sql  0021_gifted_machine_man.sql  0022_glossy_living_tribunal.sql  0023_closed_shockwave.sql  0024_brave_ezekiel.sql  0024_past_inertia.sql  0025_tearful_prodigy.sql  0026_handy_stellaris.sql  0027_dapper_mastermind.sql  0028_sparkling_lady_mastermind.sql  0029_complex_vanisher.sql  0030_cheerful_umar.sql  0031_supreme_squadron_sinister.sql  0032_low_korg.sql  0033_add_user_left_at.sql  0033_nostalgic_thor_girl.sql  0034_submission_reminder.sql
migrations/: 0001_initial.sql
scripts/: backfill-session-points.ts
src/: analytics-dev.ts  analytics.ts  commands.ts  config.rs  console.ts  constants.rs  db.rs  error.rs  global.d.ts  index.ts  main.rs  metrics.rs  models.rs  monitoring.ts  register-commands.ts  types.ts
templates/: error.html  hall_of_fame.html  houses.html  layout.html  leaderboard.html  user.html
tests/: architecture.test.ts  calculatePoints.test.ts  houseRankNotifications.test.ts  (+13 more)
(+184 files in other folders)
