[package]
name = "hogwarts-productivity-hub-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hogwarts-bot"
path = "src/main.rs"

[dependencies]
# Discord
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = [
    "client", "gateway", "model", "cache", "collector",
    "rustls_backend",
] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", "postgres", "chrono", "macros",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["limit", "trace"] }

# Templates
askama = { version = "0.12" }
askama_axum = "0.4"

# Metrics
prometheus = { version = "0.13", features = ["process"] }

# Time/timezone
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Error handling
anyhow = "1"

# Env / config
dotenvy = "0.15"

# Scheduler (cron jobs)
tokio-cron-scheduler = "0.11"

# HTTP client (fetching attachment content)
reqwest = { version = "0.12", features = ["json"] }
csv = "1"

# Misc
rand = "0.8"
once_cell = "1"
regex = "1"
